2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Finally.pm: New way to create cleanup functions.
	* Engine.pm: Adapt to new Finally, add 'finalizer' method to schedule a
	function to run when process finishes.
	* Engine.pm, PkgVersion.pm: Move AutoScanpackages to happen just after
	buildlock removal for each package. The apt-get update is only run at the
	end of a build, using the new finalizer mechanism.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: New function apt_available, to check if apt is around.
	* Engine.pm: Make things work with apt uninstalled.

2006-03-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: when an error is generated on Intel hardware, warn 
	users that many maintainers don't have Intel hardware.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Don't break everything.

2006-03-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* FinkVersion.pm.in: new function default_binary_version

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm:
		- Store the full tree ("stable/main") instead of just the first
		component ("stable").
		- Remove in_tree, it's unused.
	* Engine.pm: Use the full tree in dumpinfo.
	
	*** THIS IS A DB FORMAT CHANGE, RUN index -f OR EXPECT BREAKAGE ***

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Scanpackages.pm: Use CLI::capture to shut up Fink::Package.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* CLI.pm: Adjust prototype for &capture.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* CLI.pm: New function &capture, to hijack STDOUT and STDERR.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* FinkVersion.pm.in: Collapse copy/pasted code into a loop.

2006-03-21  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Catch another .pc syntax that triggers a bug.

2006-03-20  Dave Vasilevsky  <vasi@users.sourceforge.net>
